# simple_database

./: CMakeLists.txt  README.md  main.c  test.sh
include/: CommandPreprocessing.h  CommandProcessing.h  InputBuffer.h  Statement.h  Utils.h  command_processing.h  cursor.h  input_buffer.h  node.h  prepare_result.h  row_serialization.h  statement.h  statement_processor.h  table.h  types.h
src/: CommandProcessing.c  InputBuffer.c  Statement.c  Utils.c  command_processing.c  cursor.c  input_buffer.c  node.c  row_serialization.c  statement_processor.c  table.c
